        - Added ClientResource#followRedirects property and the related
          implementation code.
        - Deprecated the abstract DigestRepresentation class, replaced 
          by Digester. Added a getDigester method on the Representation 
          class.
        - Deprecated Representation#checkDigest and 
          Representation#computeDigest methods.
    - Miscellaneous
        - Component XML configuration has been moved into an Engine 
          ComponentXmlParser class.
        - Added unit test case for the Alphanum algorithm. 
          Contributed by Davide Angelocola.
        - ServerResource now rethrows exceptions from annotated methods.
          Reported by Tal Liron.
        - Removed the Script extension and Scripturian libraries that 
          will now be managed outside the Restlet project by Tal Liron.
 
- 1.2 Milestone 2 (2009-04-01)
    - Breaking changes
        - Finder#createTarget() methods are now all protected. The 
          findTarget() method is now public. Suggested by Leigh Klotz.
        - All core representation classes have been moved from the
          "org.restlet.resource" package into a new 
          "org.restlet.representation" package. Make sure to adjust your
          import instructions.
        - The ConnectorService#afterSend() and beforeSend() are now
          always called, even if no entity is written. They are now 
          related to the sending of the message itself.
          Suggested by Paul Davis.
        - The Router.createFinder() method is now public.
        - The Callback abstract class in the GWT module is now an 
          interface. This should have no impact in most cases. Just
          remove any associated @Override annotations.
          Suggested by Scooter Willis.
    - Bugs fixed
        - Fixed typo in the declaration of the 
          o.r.e.Engine#DESCRIPTOR_AUTHENTICATOR. 
          Reported by Remi Dewitte.    
        - Removed all string instantiations of secrets. 